--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wwebjs-bot",
   "version": "1.0.0",
-  "description": "A WhatsApp bot that utilizes wweb.js",
-  "main": "index.js",
+  "description": "A WhatsApp Bot that Utilizes Wweb.js",
+  "main": "./bot.js",
   "scripts": {
     "start": "node bot.js",
     "dev": "nodemon bot.js",
@@ -17,8 +17,10 @@
   "author": "GiftedTech",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.8.4",
+    "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.24.0",
-    "qrcode-terminal": "^0.12.0"
+    "yt-search": "^2.12.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
