--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wwebjs-bot",
   "version": "1.0.0",
-  "description": "A WhatsApp Bot that Utilizes Wweb.js",
-  "main": "./index.js",
+  "description": "A WhatsApp bot that utilizes wweb.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.24.0",
     "yt-search": "^2.12.1"
