--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   "dependencies": {
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
+    "readline": "^1.3.0",
     "whatsapp-web.js": "^1.24.0",
     "yt-search": "^2.12.1"
   },
