--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ ALLOWED_GROUPS=123@g.us
 BLOCKED_USERS=
 AUTH_PATH=./auth
 HEADLESS=true
-# AUTH_TYPE=pairing-code/qr-code (optional)
+AUTH_TYPE=terminal #or pairing-code or qr-code (optional)
