--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-BOT_NUMBER=
-OWNER_NUMBER=
-ALLOWED_NUMBERS=
-ALLOWED_GROUPS=123@g.us
+BOT_NUMBER=923143200187
+OWNER_NUMBER=923253617422
+ALLOWED_NUMBERS=923253617422, 
+ALLOWED_GROUPS=
 BLOCKED_USERS=
 AUTH_PATH=./auth
 HEADLESS=true
-AUTH_TYPE=terminal #or pairing-code or qr-code (optional)
+AUTH_TYPE=qr-code
